--- a/concho/sass/_theme.scss
+++ b/concho/sass/_theme.scss
@@ -1261,7 +1261,6 @@ body{
 											text-align: right;
 										}
 										a{
-											display: block;
 											color: $white;
 											text-decoration: none;
 										}
